Add full screen

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <title>WebGL-ts-demo</title>
   </head>
 
-  <body>
-    <canvas id="webgl" width="800" height="800">
+  <body style="margin:0;
+  padding:0;
+  overflow:hidden;">
+    <style>
+      body {
+        margin:0;
+        padding:0;
+        overflow:hidden;
+      }
+      
+      canvas {
+        display:block;
+      }
+      </style>
+    <canvas id="webgl">
     Please use a browser that supports "canvas"
     </canvas>
     <script src="dist/bundle.js" type="module"></script>
